--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625-gecko.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625-gecko.cfg
@@ -1,4 +1,4 @@
-// 125-iguana.cfg v1.8.99.4
+// rsr-eng-ion-0625-gecko.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,32 +6,33 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = rsr-eng-ion-125-iguana
-	oldName = RadonEngine1
+	name = rsr-eng-ion-0625-gecko
+	oldName = EngineGecko
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/iguana/eng-iguana }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/eng-gecko }
 	scale = 1.0
 	rescaleFactor = 1.0
-	bulkheadProfiles = srf, size1
+	bulkheadProfiles = size0
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 0.5, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.5, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 0.23276, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -0.23276, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = ionPropulsion
-	entryCost = 19800
-	cost = 9000
+	entryCost = 16800
+	cost = 8000
 	category = Engine
 	subcategory = 0
 
-	title = RSR "Iguana" Radon Electric Propulsion System
+	title = Radon Ion Propulsion Engine "Gecko"
 	manufacturer = #RSS-Agency-titl
-	description = Iguana Electric Propulsion. Velit non nulla est officia nostrud.
-	tags = new // #RSS-ion-tags
+	description = Gecko Ion Drive. Id nisi non in excepteur cillum dolor magna nisi laboris qui Lorem.
+	tags = #RSS-ion-tags
 
-	mass = 0.99
+	mass = 0.4
 
 	dragModelType = default
 	maximum_drag = 0.2
@@ -39,58 +40,33 @@ PART
 	angularDrag = 2
 
 	crashTolerance = 7
-	breakingForce = 200
-	breakingTorque = 200
 
 	maxTemp = 2000
-	// heatConductivity = 0.06 // half default
-	skinInternalConductionMult = 4.0
-	emissiveConstant = 0.8 // engine nozzles are good at radiating.
 
 	EFFECTS
-	{
-		running_closed
+	{		
+		IonPlume
 		{
 			AUDIO
 			{
 				channel = Ship
-				clip = RustyStarRockets/Sounds/sound_iguana
+				clip = RustyStarRockets/Sounds/sound_gecko
 				volume = 0.0 0.0
-				volume = 1.0 1.0
-				pitch = 0.0 0.8
-				pitch = 1.0 1.0
+				volume = 0.1 0.20
+				volume = 1.0 0.4
+				pitch = 0.0 0.2
+				pitch = 1.0 0.8
 				loop = true
 			}
 			MODEL_MULTI_PARTICLE
 			{
-				modelName = RustyStarRockets/FX/iguanaEFF
-				transformName = thrustTransform
+				modelName = RustyStarRockets/FX/geckoEFF
+				transformName = thrust
 				emission = 0.0 0.0
-				emission = 0.4 0.0
-				emission = 0.6 0.8
-				emission = 1 1.15
-				speed = 0.4 0.3
-				speed = 0.6 0.8
-				speed = 1.0 1.15
-			}
-
-		}
-		engage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_medium
-				loop = false
-			}
-		}
-		disengage
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = sound_vent_soft
-				loop = false
+				emission = 0.1 0.3			
+				emission = 1.0 1.0
+				//speed = 0.0 0.0
+				//speed = 1.0 1.0
 			}
 		}
 	}
@@ -98,18 +74,19 @@ PART
 	MODULE
 	{
 		name = ModuleEnginesFX
-		thrustVectorTransformName = thrustTransform
-		exhaustDamage = True
-		runningEffectName = running_closed
+		engineID = Ion
+		thrustVectorTransformName = thrust
+		exhaustDamage = False
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 33
-		heatProduction = 10
+		maxThrust = 6
+		heatProduction = 0
+		powerEffectName = IonPlume
 		EngineType = Electric
 		PROPELLANT
 		{
 			name = ElectricCharge
-			ratio = 1.8
+			ratio = 3
 		}
 		PROPELLANT
 		{
@@ -118,7 +95,7 @@ PART
 		}
 		atmosphereCurve
 		{
-			key = 0 3333
+			key = 0 4200
 			key = 1 100
 			key = 1.2 0.001
 		}
@@ -126,28 +103,15 @@ PART
 
 	MODULE
 	{
-		name = ModuleGimbal
-		gimbalTransformName = thrustTransform
-		gimbalRange = 2
-		gimbalResponseSpeed = 50
-		useGimbalResponseSpeed = True
-		enablePitch = True
-		enableRoll = True
-		enableYaw = True
-		flipYZ = False
-		gimbalActive = False
-		gimbalLimiter = 100
-		gimbalLock = False
+		name = FXModuleAnimateThrottle
+		animationName = GeckoAnimation
+		dependOnEngineState = True
+		responseSpeed = 0.5
+		engineName = Ion
+		dependOnThrottle = True
 	}
 
-MODULE
-{
-	  name = FXModuleAnimateThrottle
-	  animationName = radonengine
-	  dependOnEngineState = True
-	  responseSpeed = 0.5
-}
-MODULE
+	MODULE
 	{
 		name = ModuleTestSubject
 		useStaging = True
@@ -229,5 +193,19 @@ MODULE
 			situationMask = 32
 			body = _NotSun
 		}
+	}
+
+	// Dimensions: x: 0.63, y: 0.46, z: 0.63
+	// Bounding Box Size: 179.8518 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 180
+		stackableQuantity = 3
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 0.2778,0.7799,0.4109, 0.2778,0.7799,0.4109, 0.3033,1,0.101, 0.3033,0.7081,0.2409, 0.2778,0.7798,0.4109, 0.2778,0.78,0.4109, 0,0.002548,-3.037E-10, 0.625,0.4604,0.625
 	}
 }
