--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-leg-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-leg-250.cfg
@@ -18,7 +18,7 @@ PART
 	bulkheadProfiles = srf
 
 	attachRules = 0,1,0,0,1
-	node_attach = -0.2, 0.0, 0.0, 1.0, 0.0, 0.0, 1
+	node_attach = -0.2, 0.0, 0.0, 1.0, 0.0, 0.0, 1, 1
 
 	TechRequired = advRocketry
 	entryCost = 44200
@@ -29,6 +29,7 @@ PART
 	title = Atomic Landing Engine
 	manufacturer = #RSS-Agency-titl
 	description = Multi Mode Engine: Normal and OVERDRIVE. Do dolor proident consectetur.
+	tags = #autoLOC_500875 // ground land leg support
 
 	mass = 2.65
 
@@ -282,6 +283,14 @@ PART
 	{
 		name = ModuleCargoPart
 		packedVolume = 23500
+	}
+
+	// Dimensions: x: 0.68, y: 1.90, z: 1.03
+	// Bounding Box Size: 1328.846 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 1350
 	}
 
 	DRAG_CUBE
