--- a/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
@@ -32,16 +32,93 @@
 	!tmp0 = DELETE
 }
 
-		#RSR-aant = )atomic )ant
-		#RSR-bubu = )bubu
-		#RSR-bura = )bura
-		#RSR-falc = )falchion
-		#RSR-geck = )gecko
-		#RSR-gdrx = )goodrax
-		#RSR-iguana = )iguana
-		#RSR-lsword = )longsword
-		#RSR-mstrl = )maestral
-		#RSR-gard = )ogard
-		#RSR-shjz = )shejoz
-		#RSR-ttnplk = )tutnplok
-		#RSR-vozm = )voozmee
+@PART[rsr-srb-125-bubu]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-bubu-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-srb-125-voozmee]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-vozm-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-nuc-leg-250,rsr-eng-nuc-250-aa]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-aant-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-jet-125-turbo]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-bura-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-125-falchion]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-falc-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-ion-0625-gecko]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-geck-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-125-goodrax]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-gdrx-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-ion-125-iguana]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-iguana-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-250-longsword]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-lsword-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-jet-125-basic]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-mstrl-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-250-ogard]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-gard-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-rad-shejoz]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-shjz-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
+
+@PART[rsr-eng-125-tutnplok]:NEEDS[RustyStar/RustyStarRockets]:After[RustyStarRockets]
+{
+	tmp0 = #RSS-ttnplk-tags
+	@tags = #$tags$ $tmp0$
+	!tmp0 = DELETE
+}
