--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-falchion.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-falchion.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = size1
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0,1.0,0.0 , 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0,-1.0, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = aerospaceTech
 	entryCost = 35000
@@ -26,10 +27,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Falchion Engine
+	title = RSR Falchion Engine 
 	manufacturer = #RSS-Agency-titl
 	description = MultiModeEngine: AirBreathing and ClosedCycle. Occaecat Lorem culpa consectetur ex laborum incididunt est ad proident ut sunt occaecat.
-	tags = new // #RSS-eng-tags
+	tags = #RSS-eng-tags
 
 	mass = 2.0
 
@@ -314,5 +315,16 @@ PART
 		useEvent = True
 	}
 
+	// Dimensions: x: 1.64, y: 1.47, z: 1.64
+	// Bounding Box Size: 3964.911 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 3965
+	}
 
+	DRAG_CUBE
+	{
+		cube = Default, 1.615,0.7591,0.9184, 1.615,0.7591,0.9184, 1.213,0.9898,0.09806, 1.213,0.9957,0.706, 1.615,0.7547,0.9184, 1.615,0.7536,0.9184, 0,-0.1085,5.96E-08, 1.644,1.467,1.644
+	}
 }
