--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-goodrax.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-goodrax.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = size1
 
 	attachRules = 1,0,1,0,0
-	node_stack_top = 0.0, 0.07, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0, -0.9636, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 0.625, 0.0, 0.0, 0.625, 0.0, 1, 1
+	node_stack_bottom = 0.0, -0.625, 0.0, 0.0, -0.625, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = advRocketry
 	entryCost = 1500
@@ -26,10 +27,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR-2 Engine "Goodrax"
+	title = RSR-2 Engine "Goodrax" 1.25m
 	manufacturer = #RSS-Agency-titl
 	description = You have reached orbit and don't know what to do next? Our RSR-2 Engine can take You to the Mun or and Eeloo!
-	tags = new // #RSS-vac-tags
+	tags = #RSS-vac-tags
 
 	mass = 0.5
 
@@ -197,4 +198,17 @@ PART
 		useEvent = False
 	}
 
+	// Dimensions: x: 1.28, y: 1.03, z: 1.28
+	// Bounding Box Size: 1687.879 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 1688
+	}
+
+	DRAG_CUBE
+	{
+		cube = Fairing, 1.295,0.779,0.7357, 1.295,0.7789,0.7357, 1.267,0.9509,0.1259, 1.267,0.5221,0.9974, 1.295,0.7669,0.7357, 1.295,0.767,0.7357, 0,-0.4463,5.96E-08, 1.277,1.035,1.277
+		cube = Clean, 0.914,0.7138,0.7357, 0.914,0.7137,0.7357, 1.267,0.9509,0.1259, 1.267,0.5221,0.9974, 0.914,0.7016,0.7357, 0.914,0.7047,0.7357, 0,-0.4463,5.96E-08, 1.277,1.035,1.277
+	}
 }
