--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-tutnplok.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-tutnplok.cfg
@@ -18,8 +18,9 @@ PART
 	bulkheadProfiles = size1
 
 	attachRules = 1,0,1,0,0
-	node_stack_top = 0.0, 0.07, 0.0, 0.0, 1.0, 0.0
-	node_stack_bottom = 0.0, -1.32, 0.0, 0.0, -1.0, 0.0
+	node_stack_top = 0.0, 0.07, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -1.32, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = basicRocketry
 	entryCost = 3500
@@ -27,10 +28,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR-1 Engine "Tutnplok"
+	title = RSR-1 Engine "Tutnplok" 1.25m
 	manufacturer = #RSS-Agency-titl
 	description = Dreaming of spacetravel? Then the RSR-1 Engine is ideal product for You. Yes, 8/10 of our users says it works!
-	tags = new // #RSS-eng-tags
+	tags = #RSS-eng-tags
 
 	mass = 1.5
 	dragModelType = default
@@ -207,4 +208,19 @@ PART
 		useEvent = False
 	}
 
+	// Dimensions: x: 1.28, y: 1.37, z: 1.28
+	// Bounding Box Size: 2229.233 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 2229
+	}
+
+	DRAG_CUBE
+	{
+		cube = Fairing, 1.705,0.7788,0.7357, 1.705,0.7788,0.7357, 1.267,0.9532,0.129, 1.267,0.573,1.333, 1.705,0.7814,0.7357, 1.705,0.7813,0.7357, 0,-0.6122,1.192E-07, 1.277,1.366,1.277
+		cube = Clean, 1.354,0.7608,0.7357, 1.354,0.7715,0.7357, 1.267,0.9532,0.129, 1.267,0.573,1.333, 1.705,0.6939,1.332, 1.705,0.7813,0.7357, 0,-0.6122,1.192E-07, 1.277,1.366,1.277
+		cube = Fairing, 1.354,0.7608,0.7357, 1.354,0.7715,0.7357, 1.267,0.9532,0.129, 1.267,0.573,1.333, 1.705,0.6939,1.332, 1.705,0.7813,0.7357, 0,-0.6122,1.192E-07, 1.277,1.366,1.277
+		cube = Clean, 1.003,0.7421,0.7357, 1.003,0.7586,0.7357, 1.267,0.9532,0.129, 1.267,0.573,1.333, 1.079,0.7525,0.7357, 1.079,0.751,0.7995, 0,-0.6122,1.192E-07, 1.277,1.366,1.277
+	}
 }
