--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-ogard.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-ogard.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = size2
 
 	attachRules = 1,0,1,0,0
-	node_stack_top = 0.0, 0.16609, 0.0, 0.0, 1.0, 0.0, 2
-	node_stack_bottom = 0.0, -1.74353, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, 0.16609, 0.0, 0.0, 1.0, 0.0, 2, 1
+	node_stack_bottom = 0.0, -1.74353, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = heavyRocketry
 	entryCost = 4000
@@ -26,11 +27,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Liquid Fuel Engine "Ogard"
+	title = RSR Liquid Fuel Engine "Ogard" 2.5m
 	manufacturer = #RSS-Agency-titl
 	description = Magna officia qui est aliqua adipisicing ut.
-
-	tags = new // #RSS-vac-tags
+	tags = #RSS-vac-tags
 
 	mass = 1.75
 	dragModelType = default
@@ -373,4 +373,17 @@ PART
 		}
 	}
 
+	// Dimensions: x: 2.50, y: 1.91, z: 2.50
+	// Bounding Box Size: 11935.27 liters
+	MODULE
+	{
+	name = ModuleCargoPart
+	packedVolume = 11935
+	}
+
+	DRAG_CUBE
+	{
+		cube = Fairing, 4.785,0.7806,1.324, 4.785,0.7806,1.324, 4.853,0.9943,0.09928, 4.853,0.1026,1.779, 4.785,0.7804,1.324, 4.785,0.7804,1.324, 0,-0.7887,1.192E-07, 2.5,1.91,2.5
+		cube = Clean, 2.81,0.7697,1.345, 2.81,0.7699,1.345, 4.853,0.9943,0.09928, 4.853,0.1026,1.779, 2.81,0.7603,1.345, 2.81,0.761,1.345, 0,-0.7887,2.384E-07, 2.5,1.91,2.5
+	}
 }
