--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-125-iguana.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-125-iguana.cfg
@@ -17,8 +17,9 @@ PART
 	bulkheadProfiles = srf, size1
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 0.5, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.5, 0.0, 0.0, -1.0, 0.0, 1
+	node_stack_top = 0.0, 0.5, 0.0, 0.0, 1.0, 0.0, 2, 1
+	node_stack_bottom = 0.0, -0.5, 0.0, 0.0, -1.0, 0.0, 2, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = ionPropulsion
 	entryCost = 19800
@@ -29,7 +30,7 @@ PART
 	title = RSR "Iguana" Radon Electric Propulsion System
 	manufacturer = #RSS-Agency-titl
 	description = Iguana Electric Propulsion. Velit non nulla est officia nostrud.
-	tags = new // #RSS-ion-tags
+	tags = #RSS-ion-tags
 
 	mass = 0.99
 
@@ -229,5 +230,18 @@ MODULE
 			situationMask = 32
 			body = _NotSun
 		}
+	}
+
+	// Dimensions: x: 1.25, y: 1.00, z: 1.25
+	// Bounding Box Size: 1562.501 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 1563
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 1.213,0.7665,0.7222, 1.213,0.7665,0.7222, 1.213,0.9918,0.1647, 1.213,0.7332,0.3718, 1.213,0.7683,0.7222, 1.213,0.7647,0.7222, 0,0,0, 1.25,1,1.25
 	}
 }
