--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-basic.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-basic.cfg
@@ -1,4 +1,4 @@
-// rsr-eng-jet-125-basic.cfg v1.8.99.4
+// rsr-eng-jet-125-maestral.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,7 +6,7 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = rsr-eng-jet-125-basic
+	name = rsr-eng-jet-125-maestral
 	oldName = RSRBasicJet
 	module = Part
 	author = GagaX and zer0Kerbal
@@ -18,7 +18,8 @@ PART
 	bulkheadProfiles = size1
 
 	attachRules = 1,0,1,0,0
-	node_stack_top = 0.0, 0.137, 0.0, 0.0, 1.0, 0.0
+	node_stack_top = 0.0, 0.137, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = aviation
 	entryCost = 4000
@@ -29,7 +30,7 @@ PART
 	title = RSR-33 "Maestral" Basic Jet Engine
 	manufacturer = #RSS-Agency-titl
 	description = A standard air breathing engine.
-	tags = new // #RSS-jet-tags
+	tags = #RSS-jet-tags
 
 	mass = 1.5
 
@@ -405,4 +406,16 @@ PART
 		}
 	}
 
+	// Dimensions: x: 1.25, y: 1.07, z: 1.25
+	// Bounding Box Size: 1678.344 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 1678
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 0.8129,0.7674,0.7222, 0.8129,0.7674,0.7222, 1.213,0.999,0.09993, 1.213,0.4476,0.9743, 0.8129,0.7626,0.7222, 0.8129,0.761,0.7222, 0,-0.4004,5.96E-08, 1.25,1.074,1.25
+	}
 }
