--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-vtol-l.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-vtol-l.cfg
@@ -1,4 +1,4 @@
-// .cfg v1.8.99.4
+// rsr-eng-vtol-l.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -16,9 +16,9 @@ PART
 	rescaleFactor = 1.0
 
 	attachRules = 0,1,0,0,1
-	node_attach = -0.5, 0.0, 0.0, -1.0, 0.0, 0.0, 1
+	node_attach = -0.5, 0.0, 0.0, -1.0, 0.0, 0.0, 1, 1
 
-	TechRequired = experimentalRocketry
+	TechRequired = veryHeavyRocketry // experimentalRocketry
 	entryCost = 22000
 	cost = 7099
 	category = Propulsion
@@ -27,7 +27,7 @@ PART
 	title = RSR VTOL 2-L
 	manufacturer = #RSS-Agency-titl
 	description = In relativity, movement is continuous, causally determinate and well defined, while in quantum mechanics it is discontinuous, not causally determinate and not well defined.(David Bohm) MultiModeEngine: Air Breathing and Closed Cycle>
-	tags = new // #RSS-vtol-tags
+	tags = #RSS-vtol-tags
 
 	mass = 0.45
 
@@ -35,6 +35,7 @@ PART
 	maximum_drag = 0.01
 	minimum_drag = 0.01
 	angularDrag = 1
+
 	crashTolerance = 19
 
 	maxTemp = 3900
@@ -296,4 +297,17 @@ PART
 		revClampPercent = True
 	}
 
+	// Dimensions: x: 1.16, y: 1.16, z: 1.00
+	// Bounding Box Size: 1339.833 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 1340
+	}
+
+	DRAG_CUBE
+	{
+		cube = A, 1.026,0.7632,0.6773, 1.026,0.7639,0.6773, 1.068,0.7633,0.5976, 1.068,0.7497,0.5976, 0.8292,0.3175,0.6961, 0.8292,0.3579,0.6536, 0,0,0.02249, 1.16,1,1.155
+		cube = B, 1.026,0.7613,0.6773, 1.026,0.762,0.6773, 0.8292,0.3169,0.6961, 0.8292,0.3639,0.6536, 1.068,0.7452,0.5976, 1.068,0.7594,0.5976, 0,0.02249,0, 1.16,1.155,1
+	}
 }
