--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-bubu.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-bubu.cfg
@@ -17,9 +17,9 @@ PART
 	bulkheadProfiles = size1, srf
 
 	attachRules = 1,1,1,1,0
-	node_stack_top = 0.0, 0.61214, 0.0, 0.0, 1.0, 0.0, 1
-	node_stack_bottom = 0.0, -0.87734, 0.0, 0.0, -1.0, 0.0, 1
-	node_attach = 0.0, 0.0, -0.625, 0.0, 0.0, 1.0, 1
+	node_stack_top = 0.0, 0.61214, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_stack_bottom = 0.0, -0.87734, 0.0, 0.0, -1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, -0.625, 0.0, 0.0, 1.0, 1, 1
 
 	fx_exhaustFlame_yellow = 0.0, -6.756, 0.0, 0.0, 1.0, 0.0, running
 	fx_exhaustSparks_yellow = 0.0, -6.756, 0.0, 0.0, 1.0, 0.0, running
@@ -35,10 +35,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Small RSB "Bubu"
+	title = RSR Small RSB "Bubu" 1.25m
 	manufacturer = #RSS-Agency-titl
 	description = This is basically a very big firecracker.
-	tags = new // #RSS-srb-tags
+	tags = #RSS-srb-tags
 
 	mass = 0.55
 
@@ -299,4 +299,16 @@ PART
 		}
 	}
 
+	// Dimensions: x: 1.25, y: 1.49, z: 1.25
+	// Bounding Box Size: 2327.315 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 2327
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 1.788,0.7811,0.7222, 1.788,0.7811,0.7222, 1.213,1,0.09938, 1.213,0.6546,0.4439, 1.788,0.7812,0.7222, 1.788,0.781,0.7222, 0,-0.1326,4.742E-08, 1.25,1.489,1.25
+	}
 }
