--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-voozmee.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-voozmee.cfg
@@ -35,10 +35,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Rusty Booster "Voozmee"
+	title = RSR Rusty Booster "Voozmee" 1.25m
 	manufacturer = #RSS-Agency-titl
 	description = Eu deserunt ad sint ullamco duis et.
-	tags = new // #RSS-srb-tags
+	tags = #RSS-srb-tags
 	
 	mass = 1.5
 
@@ -116,4 +116,16 @@ PART
 		useEvent = False
 	}
 
+	// Dimensions: x: 1.25, y: 8.80, z: 1.25
+	// Bounding Box Size: 13743.85 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 13744
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 10.7,0.7591,0.7222, 10.7,0.7591,0.7222, 1.213,1,0.1058, 1.213,0.9988,0.635, 10.7,0.7592,0.7222, 10.7,0.759,0.7222, 0,-0.2613,9.344E-08, 1.25,8.796,1.25
+	}
 }
