--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-turbo.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-turbo.cfg
@@ -1,4 +1,4 @@
-// rsr-eng-jet-125-turbo.cfg v1.8.99.4
+// rsr-eng-jet-125-bura.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
 // updated: 08 Jul 2023
@@ -6,7 +6,7 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
 {
-	name = rsr-eng-jet-125-turbo
+	name = rsr-eng-jet-125-bura
 	oldName = RSRturboJet
 	module = Part
 	author = GagaX and zer0Kerbal
@@ -25,10 +25,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Turbo Ramjet Engine "Bura"
+	title = RSR Turbo Ramjet Engine "Bura" 1.25m
 	manufacturer = #RSS-Agency-titl
 	description = Aliquip Lorem esse pariatur.
-	tags = new // #RSS-jet-tags
+	tags = #RSS-jet-tags
 
 	mass = 1.75
 
