--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-bura.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-bura.cfg
@@ -11,7 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/bura/rsr-eng-jet-125-turbo }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/bura/rsr-eng-jet-125-bura }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1
@@ -489,4 +489,16 @@ PART
 		}
 	}
 
+	// Dimensions: x: 1.39, y: 1.73, z: 1.39
+	// Bounding Box Size: 3323.379 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 3323
+	}
+
+	DRAG_CUBE
+	{
+		cube = Default, 2.219,0.7786,0.8026, 2.219,0.7786,0.8026, 1.492,0.8025,0.6126, 1.492,0.2667,0.8319, 2.219,0.7799,0.8026, 2.219,0.7796,0.8026, 0,-0.05493,1.964E-08, 1.387,1.729,1.387
+	}
 }
