--- a/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/GimbalTrim.cfg
@@ -45,7 +45,7 @@
 	}
 }
 
-@PART[rsr-eng-125-tutnplok,rsr-eng-jet-125-turbo]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
+@PART[rsr-eng-125-tutnplok,rsr-eng-jet-125-bura]:HAS[!MODULE[GimbalTrim]]:NEEDS[GimbalTrim]:FOR[RustyStarRockets]
 {
 	MODULE
 	{
@@ -84,11 +84,3 @@
 		limitToGimbalRange = False
 	}
 }
-
-// \engineS3.cfg:
-// BigRadialEngineLandingLegs.cfg:
-// \liquidEngineRadial\liquidEngineRadial.cfg:
-//   		gimbalTransformName = obj_gimbal
-
-
-// \RSR_S2_V.cfg:
