--- a/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake-mini.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Aero/rsr-airbrake-mini.cfg
@@ -118,5 +118,19 @@ PART
 		}		
 	}
 
-// no drag cube
+	// Dimensions: x: 0.43, y: 1.17, z: 0.11
+	// Bounding Box Size: 56.14533 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 56
+		stackableQuantity = 10
+	}
+
+	DRAG_CUBE
+	{
+		cube = neutral, 0.09417,0.5232,0.3123, 0.09417,0.527,0.3123, 0.02665,0.3505,0.5217, 0.02665,0.4695,1.033, 0.3631,0.9111,0.1996, 0.3631,0.9087,0.1812, -2.98E-08,-0.3493,0.00688, 0.4271,1.171,0.1122
+		cube = fullDeflectionPos, 0.114,0.5978,0.3123, 0.114,0.5971,0.3123, 0.3344,0.8738,0.4608, 0.3344,0.8746,0.8428, 0.1385,0.4864,1.107, 0.1385,0.6163,1.107, 5.96E-08,-0.04094,0.4669, 0.4271,0.8042,1.032
+		cube = fullDeflectionNeg, 0.1112,0.5905,0.3123, 0.1112,0.5897,0.3123, 0.3314,0.844,0.4681, 0.3314,0.8876,0.8688, 0.14,0.5774,1.098, 0.14,0.5101,1.05, -4.47E-08,-0.03723,-0.4469, 0.4271,0.8116,1.023
+	}
 }
