--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-1.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-1.cfg
@@ -1,7 +1,7 @@
-// rsr-bay-cargo-250-1.cfg v1.8.99.3
+// rsr-bay-cargo-250-1.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
-// updated: 18 Mar 2023
+// updated: 07 Jul 2023
 
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
@@ -12,6 +12,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	MODEL { model = RustyStar/RustyStarRockets/Assets/Cargo/one/rsr-bay-cargo-250-1 }
+	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2, srf
 
@@ -49,26 +50,39 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = RSRcargo1
-		startEventGUIName = #RSR-MAG-cargo-strt // Open Cargo Bay
-		endEventGUIName = #RSR-MAG-cargo-stop // Close Cargo Bay
-		actionGUIName = #RSR-MAG-cargo-actn // Toggle Cargo Bay
+		startEventGUIName = #RSS-MAG-cargo-strt // Open Cargo Bay
+		endEventGUIName = #RSS-MAG-cargo-stop // Close Cargo Bay
+		actionGUIName = #RSS-MAG-cargo-actn // Toggle Cargo Bay
 		allowDeployLimit = true
 		revClampDirection = false
 		revClampSpeed = true
 		revClampPercent = true			
 	}
 
-	//MODULE
-	//{
-	//name = ModuleCargoBay
-	//DeployModuleIndex = 0
-	//closedPosition = 1
-	//lookupRadius = 2.5
-		
-	//nodeOuterForeID = top
-	//nodeOuterAftID = bottom
-	//nodeInnerForeID = top2
-	//nodeInnerAftID = bottom2
-	//}
+	MODULE
+	{
+		name = ModuleCargoBay
+		DeployModuleIndex = 0
+		closedPosition = 1
+		lookupRadius = 1.25
+			
+		nodeOuterForeID = top
+		nodeOuterAftID = bottom
+		// nodeInnerForeID = top2
+		// nodeInnerAftID = bottom2
+	}
 
+	// Dimensions: x: 2.57, y: 4.02, z: 2.57
+	// Bounding Box Size: 26554.37 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 26554
+	}
+
+	DRAG_CUBE
+	{
+		cube = A, 7.354,0.6847,3.353, 7.354,0.6846,3.353, 15.45,0.8705,3.261, 15.45,0.8906,3.342, 7.354,0.6872,3.353, 7.354,0.6819,3.353, 0,0.625,-4.768E-07, 6.533,3.25,6.533
+		cube = B, 8.771,0.7492,1.379, 8.771,0.7492,1.379, 4.881,0.5427,2.117, 4.881,0.9963,2.084, 8.768,0.7477,1.381, 8.768,0.7507,1.392, 0,1.009,-0.00188, 2.569,4.018,2.573
+	}
 }
