--- a/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Cargo/rsr-bay-cargo-250-2.cfg
@@ -1,7 +1,7 @@
-// rsr-bay-cargo-250-2.cfg v1.8.99.3
+// rsr-bay-cargo-250-2.cfg v1.8.99.4
 // Rusty Star Rockets (RSR)
 // created: 03 Nov 2015
-// updated: 18 Mar 2023
+// updated: 07 Jul 2023
 
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 PART
@@ -12,6 +12,7 @@ PART
 	author = GagaX and zer0Kerbal
 
 	MODEL { model = RustyStar/RustyStarRockets/Assets/Cargo/two/rsr-bay-cargo-250-2 }
+	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size2, srf
 
@@ -31,7 +32,7 @@ PART
 	description = #RSR-bay-cargo-250-2-desc
 	tags = #autoLOC_500914 // contain convey equipment freight hold hollow payload (stor transport utility
 
-	mass = 1
+	mass = 0.5 // 1
 	fuelCrossFeed = True
 
 	dragModelType = default
@@ -50,9 +51,9 @@ PART
 	{
 		name = ModuleAnimateGeneric
 		animationName = RSRcargo2
-		startEventGUIName = #RSR-MAG-cargo-strt // Open Cargo Bay
-		endEventGUIName = #RSR-MAG-cargo-stop // Close Cargo Bay
-		actionGUIName = #RSR-MAG-cargo-actn // Toggle Cargo Bay
+		startEventGUIName = #RSS-MAG-cargo-strt // Open Cargo Bay
+		endEventGUIName = #RSS-MAG-cargo-stop // Close Cargo Bay
+		actionGUIName = #RSS-MAG-cargo-actn // Toggle Cargo Bay
 		allowDeployLimit = true
 		revClampDirection = false
 		revClampSpeed = true
@@ -65,17 +66,30 @@ PART
 		textureQuadName = FLAG
 	}
 
-	//MODULE
-	//{
-	//name = ModuleCargoBay
-	//DeployModuleIndex = 0
-	//closedPosition = 1
-	//lookupRadius = 2.5
-		
-	//nodeOuterForeID = top
-	//nodeOuterAftID = bottom
-	//nodeInnerForeID = top2
-	//nodeInnerAftID = bottom2
-	//}
+	MODULE
+	{
+		name = ModuleCargoBay
+		DeployModuleIndex = 0
+		closedPosition = 1
+		lookupRadius = 2.5
+			
+		nodeOuterForeID = top
+		nodeOuterAftID = bottom
+		// nodeInnerForeID = top2
+		// nodeInnerAftID = bottom2
+	}
 
+	// Dimensions: x: 2.50, y: 4.24, z: 2.55
+	// Bounding Box Size: 27031.22 liters
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 27031
+	}
+
+	DRAG_CUBE
+	{
+		cube = A, 10.67,0.7159,2.514, 10.67,0.7154,2.3, 5.077,0.9162,6.584, 5.077,0.9503,6.425, 14.72,0.814,2.535, 14.72,0.8167,1.381, 0.01412,1.285,-0.02529, 2.528,6.57,2.551
+		cube = B, 10.52,0.7264,1.334, 10.52,0.7254,1.334, 4.871,0.9729,0.3308, 4.871,0.9883,4.021, 10.44,0.7303,2.535, 10.44,0.7384,1.391, 0,0.1196,-0.02529, 2.5,4.239,2.551
+	}
 }
