--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-bura.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-bura.cfg
@@ -17,7 +17,8 @@ PART
 	bulkheadProfiles = size1
 
 	attachRules = 1,0,1,1,0
-	node_stack_top = 0.0, 0.80937, 0.0, 0.0, 1.0, 0.0
+	node_stack_top = 0.0, 0.80937, 0.0, 0.0, 1.0, 0.0, 1, 1
+	node_attach = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0, 1
 
 	TechRequired = hypersonicFlight
 	entryCost = 17000
