--- a/GameData/RustyStar/RustyStarRockets/Compatibility/BoosterSegments.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Compatibility/BoosterSegments.cfg
@@ -1,4 +1,4 @@
-// KickbackBoosterSegments.cfg v1.0.0.0
+// BoosterSegments.cfg v1.0.0.0
 // Rusty Star Rockets (RSR)
 // created: 01 Jul 2023
 // updated: 
