--- a/GameData/RustyStar/RustyStarRockets/Config/ghostparts.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/ghostparts.cfg
@@ -10,19 +10,19 @@
 // THIS FILE: CC BY-ND 4.0 by GagaX and zer0Kerbal
 
 // creates duplicate part to prevent save game issues because of a part name change
-// +PART[rsr-*]:HAS[#oldName[*]]:NEEDS[RustyStarRockets]:LAST[RustyStarRockets]
-// {
-// 	@name = #$oldName$
-// 	!TechRequired = DELETE
-// 	!entryCost = DELETE
-// 	@category = -1
-// 	%TechHidden = True
-// 	%entryCost = 0
-// 	@title ^= :^:Kindly use new part numbers :
-// 	!manufacturer = DELETE
-// 	@description = This part has been depreciated, kindly use new part.
-// 	!tags = DELETE
-// }
++PART[rsr-*]:HAS[#oldName[*]]:NEEDS[RustyStarRockets]:LAST[RustyStarRockets]
+{
+	@name = #$oldName$
+	!TechRequired = DELETE
+	!entryCost = DELETE
+	@category = -1
+	%TechHidden = True
+	%entryCost = 0
+	@title ^= :^:Kindly use new part numbers :
+	!manufacturer = DELETE
+	@description = This part has been depreciated, kindly use new part.
+	!tags = DELETE
+}
 
 @PART[rsr-*]:HAS[#oldName[*]]:NEEDS[RustyStarRockets]:AFTER[RustyStarRockets]
 { !oldName = DELETE }
