--- a/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Config/RustyStarRockets.cfg
@@ -1,4 +1,4 @@
-// RustyStarRockets v1.0.1.0
+// RustyStarRockets.cfg v1.0.1.0
 // Rusty Star Rockets (RSR)
 // created: 04 Oct 2022
 // updated: 08 Jul 2023
