--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-falchion.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-falchion.cfg
@@ -27,9 +27,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Falchion Engine 
+	title = #RSR-eng-125-falchion-titl
 	manufacturer = #RSS-Agency-titl
-	description = MultiModeEngine: AirBreathing and ClosedCycle. Occaecat Lorem culpa consectetur ex laborum incididunt est ad proident ut sunt occaecat.
+	description = #RSR-eng-125-falchion-desc
 	tags = #RSS-eng-tags
 
 	mass = 2.0
