--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-goodrax.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-goodrax.cfg
@@ -27,9 +27,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR-2 Engine "Goodrax" 1.25m
+	title = #RSR-eng-125-goodrax-titl
 	manufacturer = #RSS-Agency-titl
-	description = You have reached orbit and don't know what to do next? Our RSR-2 Engine can take You to the Mun or and Eeloo!
+	description = #RSR-eng-125-goodrax-desc
 	tags = #RSS-vac-tags
 
 	mass = 0.5
