--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-tutnplok.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-tutnplok.cfg
@@ -28,9 +28,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR-1 Engine "Tutnplok" 1.25m
+	title = #RSR-eng-125-tutnplok-titl
 	manufacturer = #RSS-Agency-titl
-	description = Dreaming of spacetravel? Then the RSR-1 Engine is ideal product for You. Yes, 8/10 of our users says it works!
+	description = #RSR-eng-125-tutnplok-desc
 	tags = #RSS-eng-tags
 
 	mass = 1.5
