--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-longsword.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-longsword.cfg
@@ -27,9 +27,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Longsword Engine
+	title = #RSR-eng-250-longsword-titl
 	manufacturer = #RSS-Agency-titl
-	description = Multimode: Air Breathing and Closed Cycle. Ex deserunt consequat cupidatat dolore deserunt dolore esse labore ad adipisicing Lorem sint elit ut mollit. 
+	description = #RSR-eng-250-longsword-desc
 	tags = #RSS-eng-tags
 
 	mass = 7.5
