--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-mariveex.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-mariveex.cfg
@@ -27,9 +27,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR 2.5m Engine "Mariveex"
+	title = #RSR-eng-250-mariveex-titl
 	manufacturer = #RSS-Agency-titl
-	description = Big rocket engine.
+	description = #RSR-eng-250-mariveex-desc
 	tags = #RSS-eng-tags
 
 	mass = 6
