--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-ogard.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-250-ogard.cfg
@@ -27,9 +27,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Liquid Fuel Engine "Ogard" 2.5m
+	title = #RSR-eng-250-ogard-titl
 	manufacturer = #RSS-Agency-titl
-	description = Magna officia qui est aliqua adipisicing ut.
+	description = #RSR-eng-250-ogard-desc
 	tags = #RSS-vac-tags
 
 	mass = 1.75
