--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625-gecko.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-0625-gecko.cfg
@@ -27,9 +27,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = Radon Ion Propulsion Engine "Gecko"
+	title = #RSR-eng-ion-0625-gecko-titl
 	manufacturer = #RSS-Agency-titl
-	description = Gecko Ion Drive. Id nisi non in excepteur cillum dolor magna nisi laboris qui Lorem.
+	description = #RSR-eng-ion-0625-gecko-desc
 	tags = #RSS-ion-tags
 
 	mass = 0.4
