--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-125-iguana.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-ion-125-iguana.cfg
@@ -27,9 +27,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR "Iguana" Radon Electric Propulsion System
+	title = #RSR-eng-ion-125-iguana-titl
 	manufacturer = #RSS-Agency-titl
-	description = Iguana Electric Propulsion. Velit non nulla est officia nostrud.
+	description = #RSR-eng-ion-125-iguana-desc
 	tags = #RSS-ion-tags
 
 	mass = 0.99
