--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-bura.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-bura.cfg
@@ -26,9 +26,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Turbo Ramjet Engine "Bura" 1.25m
+	title = #RSR-eng-jet-125-bura-titl
 	manufacturer = #RSS-Agency-titl
-	description = Aliquip Lorem esse pariatur.
+	description = #RSR-eng-jet-125-bura-desc
 	tags = #RSS-jet-tags
 
 	mass = 1.75
