--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-125-aa.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-125-aa.cfg
@@ -27,9 +27,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR "Atomic Ant" Atomic Rocket Motor
+	title = #RSR-eng-nuc-125-aa-titl
 	manufacturer = #RSS-Agency-titl
-	description = Culpa duis et elit consequat ullamco amet duis excepteur veniam.
+	description = #RSR-eng-nuc-125-aa-desc
 	tags = #RSS-nuc-tags
 
 	mass = 3
