--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-maestral.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-jet-125-maestral.cfg
@@ -26,9 +26,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR-33 "Maestral" Basic Jet Engine 1.25m
+	title = #RSR-eng-jet-125-maestral-titl
 	manufacturer = #RSS-Agency-titl
-	description = A standard air breathing engine.
+	description = #RSR-eng-jet-125-maestral-desc
 	tags = #RSS-jet-tags
 
 	mass = 1.5
