--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-250-aa.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-250-aa.cfg
@@ -27,9 +27,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR "Atomic Atom" Atomic Rocket Motor
+	title = #RSR-eng-nuc-250-aa-titl
 	manufacturer = #RSS-Agency-titl
-	description = Advanced characteristics of this engine are made possible by use of Rustonium.
+	description = #RSR-eng-nuc-250-aa-desc
 	tags = #RSS-nuc-tags
 
 	mass = 5.5
