--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-leg-250.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-nuc-leg-250.cfg
@@ -26,9 +26,9 @@ PART
 	category = Ground
 	subcategory = 0
 
-	title = Atomic Landing Engine
+	title = #RSR-eng-nuc-leg-250-titl
 	manufacturer = #RSS-Agency-titl
-	description = Multi Mode Engine: Normal and OVERDRIVE. Do dolor proident consectetur.
+	description = #RSR-eng-nuc-leg-250-desc
 	tags = #autoLOC_500875 // ground land leg support
 
 	mass = 2.65
