--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-rad-shejoz.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-rad-shejoz.cfg
@@ -11,7 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/shejoz/ }
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/shejoz/rsr-eng-rad-shejoz }
 	scale = 1.0
 	rescaleFactor = 0.7
 	bulkheadProfiles = srf
@@ -32,10 +32,10 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Radial Liquid Fuel Engine "Shejoz"
+	title = #RSR-eng-rad-shejoz-titl
 	manufacturer = #RSS-Agency-titl
-	description = Radial engine.
-	tags = new // #RSS-eng-tags
+	description = #RSR-eng-rad-shejoz-desc
+	tags = #RSS-eng-tags
 
 	mass = 0.9
 
