--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-vtol-l.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-vtol-l.cfg
@@ -24,9 +24,9 @@ PART
 	category = Propulsion
 	subcategory = 0
 
-	title = RSR VTOL 2-L
+	title = #RSR-eng-vtol-l-titl
 	manufacturer = #RSS-Agency-titl
-	description = In relativity, movement is continuous, causally determinate and well defined, while in quantum mechanics it is discontinuous, not causally determinate and not well defined.(David Bohm) MultiModeEngine: Air Breathing and Closed Cycle>
+	description = #RSR-eng-vtol-l-desc
 	tags = #RSS-vtol-tags
 
 	mass = 0.45
