--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-bubu.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-bubu.cfg
@@ -35,9 +35,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Small RSB "Bubu" 1.25m
+	title = #RSR-srb-125-bubu-titl
 	manufacturer = #RSS-Agency-titl
-	description = This is basically a very big firecracker.
+	description = #RSR-srb-125-bubu-desc
 	tags = #RSS-srb-tags
 
 	mass = 0.55
