--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-voozmee.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-srb-125-voozmee.cfg
@@ -35,9 +35,9 @@ PART
 	category = Engine
 	subcategory = 0
 
-	title = RSR Rusty Booster "Voozmee" 1.25m
+	title = #RSR-srb-125-voozmee-titl
 	manufacturer = #RSS-Agency-titl
-	description = Eu deserunt ad sint ullamco duis et.
+	description = #RSR-srb-125-voozmee-desc
 	tags = #RSS-srb-tags
 	
 	mass = 1.5
