--- a/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-tutnplok.cfg
+++ b/GameData/RustyStar/RustyStarRockets/Parts/Engine/rsr-eng-125-tutnplok.cfg
@@ -11,8 +11,7 @@ PART
 	module = Part
 	author = GagaX and zer0Kerbal
 
-
-	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/tutnplok/rsr-eng-125-tutnplok }	scale = 1.0
+	MODEL { model = RustyStar/RustyStarRockets/Assets/Engine/tutnplok/rsr-eng-125-tutnplok }
 	scale = 1.0
 	rescaleFactor = 1.0
 	bulkheadProfiles = size1
